<resources>
    <string name="app_name">LIFE LINE</string>
    <string name="about">ABOUT</string>
    <string name="reviews_">100 reviews</string>
    <string name="enter_location">Enter your location</string>
    <string name="set_location">Set location</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_date">DD - MM - YYYY</string>
    <string name="enter_yout_mobile">Enter your mobile number</string>
    <string name="otp_that_has_been_sent_to_91_0989">Enter the 4-digit code sent to you at\n  +91 99066 66789.</string>
    <string name="hello">Hello,</string>
    <string name="search_for_test">Search for test</string>
    <string name="cadiac_checkup">Cadiac Checkup</string>
    <string name="recent_reports">Recent reports</string>
    <string name="upcoming_appointment">Upcoming Appointments</string>
    <string name="ago">1h ago</string>
    <string name="home">Home</string>
    <string name="get_direction">Get directions</string>
    <string name="call">Call</string>
    <string name="reports">Reports</string>
    <string name="write_review">Write Review</string>
    <string name="add_another_member">Add another member</string>
    <string name="request_home_sampleing">Request home sampleing</string>
    <string name="remove_test">Remove test</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="add_patient">Add Patient</string>
    <string name="address">Address</string>
    <string name="add_address">Add Address</string>
    <string name="setting">Setting</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="blood_analysis">General blood analysis</string>
    <string name="tests_available">128 test available</string>
    <string name="available_test">Available Tests</string>
    <string name="select_appointment">Select a test/tests to book an appointment</string>
    <string name="resend_code">Resend code in 00:01</string>
    <string name="edit_number">Edit number</string>
    <string name="dob">When were you born?</string>
    <string name="select_gender">Select your gender</string>
    <string name="select_city">Select city</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="name">What is your name?</string>
    <string name="name_">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="okay">Okay</string>
    <string name="submit">Submit</string>
    <string name="relation">Relation with member</string>
    <string name="about_test">About Test</string>
    <string name="preperation_before_test">Preperation Before Test</string>
    <string name="lab_availability">Lab Availability</string>
    <string name="price">₹ 123.45</string>
    <string name="price_">Price</string>
    <string name="rating">Rating</string>
    <string name="nearest">Nearest</string>
    <string name="sampleing">Sampleing</string>
    <string name="general_info">General Info</string>
    <string name="book_appointment">Book appointment</string>
    <string name="sort_by">Sort By</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">Landmark</string>
    <string name="clear_all_filters">Clear all filters</string>
    <string name="select_lab_appointment">Select a lab to book an appointment</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string-array name="gender">
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>