<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dimen_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_20">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textAllCaps="true"
            android:textAppearance="@style/AppTextAppearance.Headline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_filters"
            android:textAppearance="@style/AppTextAppearance.Subtitle2"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView17"
            android:drawableTop="@drawable/ic_rupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_red_fill_rectangle"
            android:padding="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/price_"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:drawableTop="@drawable/ic_rating"
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_red_fill_rectangle"
            android:padding="@dimen/dimen_20"
            android:text="@string/rating"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"
            app:layout_constraintEnd_toStartOf="@+id/textView19"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toTopOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/ic_location"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_red_fill_rectangle"
            android:padding="@dimen/dimen_20"
            android:text="@string/nearest"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"
            app:layout_constraintEnd_toStartOf="@+id/textView20"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView20"
            android:drawableTop="@drawable/ic_sampleing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_red_fill_rectangle"
            android:padding="@dimen/dimen_20"
            android:text="@string/sampleing"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="@+id/textView19" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>