<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.modules.dashboard.AddAddressActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:background="@drawable/bg_rounded_grey_rectangle"
        android:hint="@string/address"
        android:padding="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4"
android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/dimen_8"
            android:background="@drawable/bg_rounded_grey_rectangle"
            android:drawableRight="@drawable/ic_arrow_down"
            android:hint="@string/city"
            android:padding="@dimen/dimen_16" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_grey_rectangle"
            android:drawableRight="@drawable/ic_arrow_down"
            android:hint="@string/pincode"
            android:padding="@dimen/dimen_16" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:background="@drawable/bg_rounded_grey_rectangle"
        android:hint="@string/landmark"
        android:padding="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/add_patient"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>