<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.modules.dashboard.AddMembersActivity">

    <include
        android:id="@+id/imageView3"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_32"
            android:scaleType="center"
            android:src="@drawable/ic_camera"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            app:srcCompat="@drawable/ic_camera" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_grey_rectangle"
            android:hint="@string/name_"
            android:layout_marginTop="@dimen/dimen_16"
            android:padding="@dimen/dimen_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16"
            android:background="@drawable/bg_rounded_grey_rectangle"
            android:hint="@string/date_of_birth"
            android:padding="@dimen/dimen_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_grey_rectangle"
            android:hint="@string/gender"
            android:padding="@dimen/dimen_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_grey_rectangle"
            android:hint="@string/relation"
            android:layout_marginTop="@dimen/dimen_16"
            android:padding="@dimen/dimen_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_grey_rectangle"
            android:text="@string/address"
            android:layout_marginTop="@dimen/dimen_16"
            android:drawableRight="@drawable/ic_baseline_my_location_24"
            android:drawableTint="@color/textheading4"
            android:textAppearance="@style/AppTextAppearance.Subtitle1"
            android:padding="@dimen/dimen_16" />
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/add_member"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>