<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/dimen_20"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RadioButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text=""
    android:layout_marginRight="@dimen/dimen_8"/>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_placeholder" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/dimen_16"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:textAppearance="@style/AppTextAppearance.Headline5" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:numStars="5"
                style="?android:ratingBarStyleSmall"
                android:saveEnabled="true"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lab_availability" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:text="@string/lab_availability" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_gravity="center"
        android:textAppearance="@style/AppTextAppearance.Headline5"
        android:layout_marginLeft="@dimen/dimen_16" />
</LinearLayout>