<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    tools:context=".view.modules.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lifeline_red" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/AppTextAppearance.Headline2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:gravity="center"
        android:text="@string/enter_yout_mobile"
        android:textAppearance="@style/AppTextAppearance.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.hbb20.CountryCodePicker
            android:id="@+id/code_picker"
            android:layout_width="50dp"
            app:ccp_showArrow="true"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoFormatNumber="true"
            app:ccpDialog_showPhoneCode="true"
            app:ccpDialog_showNameCode="false"
            app:ccp_showFullName="false"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:padding="@dimen/dimen_12"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_red_rectangle"
            android:hint="@string/enter_phone" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:elevation="6dp"
        android:layout_margin="@dimen/dimen_24"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>